Fixed spacing on contact page.

--- a/src/style.css
+++ b/src/style.css
@@ -111,7 +111,6 @@ p {
 
 .content {
   margin: 30px 30px;
-  padding: 60px 40px;
 }
 
 @media (max-width: 900px) {
